--- a/index.html
+++ b/index.html
@@ -53,63 +53,166 @@
 
 
     <main>
-        <div>
 
+        <div class="">
             <!-- pre tabella -->
+            <div class="container-md">
 
-            <div class="py-3">
-                
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <h1>Catalogo Libri</h1>
-                    </div>
+                <div class="py-3">
 
-                    <div>
-                        <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <h1>Catalogo Libri</h1>
+                        </div>
+
+                        <div>
+                            <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                        </div>
                     </div>
                 </div>
+
+                <!-- tabella -->
+
+                <div>
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th class="col-6">Titolo</th>
+                                <th class="d-none d-md-table-cell col-2">Data prestito</th>
+                                <th class="col-2">Stato</th>
+                                <th class="col-2">azioni</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+
+                                <td>I pilastri della terra</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-success">disponibile</button></td>
+                                <td><i class="fa-solid fa-pen icon"></i></td>
+                            </tr>
+                            <tr>
+
+                                <td>I promessi sposi</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-success">disponibile</button></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+
+                                <td>Il signore degli anelli</td>
+                                <td>18/10/2023</td>
+                                <td><button type="button" class="btn btn-warning">in prestito</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>Harry Potter e la pietra filosofale</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-success">disponibile</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>Il codice da vinci</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-danger">non disponibile</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>Shining</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-success">disponibile</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>La divina commedia</td>
+                                <td>21/09/2023</td>
+                                <td><button type="button" class="btn btn-warning">in prestito</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>Il trono di spade</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-success">disponibile</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>Il mondo di sofia</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-danger">non disponibile</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>Le cronache di narnia: il leone, la strega e l'armadio</td>
+                                <td>25/07/2023</td>
+                                <td><button type="button" class="btn btn-warning">in prestito</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>il piccolo principe</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-success">disponibile</button></td>
+                                <td></td>
+                            </tr>
+
+                            <tr>
+
+                                <td>La storia infinita</td>
+                                <td>-</td>
+                                <td><button type="button" class="btn btn-success">disponibile</button></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
             </div>
+        </div>
 
-            <!-- tabella -->
+        <div class="container-md">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
+                    <label class="form-check-label stretched-link" for="firstCheckboxStretched">First checkbox</label>
+                </li>
+                <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckboxStretched">
+                    <label class="form-check-label stretched-link" for="secondCheckboxStretched">Second checkbox</label>
+                </li>
+                <li class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckboxStretched">
+                    <label class="form-check-label stretched-link" for="thirdCheckboxStretched">Third checkbox</label>
+                </li>
+            </ul>
 
-            <div>
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th class="col-6">Titolo</th>
-                            <th class="d-none d-md-table-cell col-2">Data prestito</th>
-                            <th class="col-2">Stato</th>
-                            <th class="col-2">azioni</th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
-                        </tr>
-                    </tbody>
-
-
-
-                </table>
-            </div>
 
         </div>
+
+
+
+
+
+
+
+
+
+
     </main>
 
 
