--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 </div>
 
                                 <div>
-                                    <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                                    <a href="pages/pages.html" class="button">Aggiungi Libro</a>
                                 </div>
                             </div>
                         </div>
